--- a/src/styles/tokens/_typography.scss
+++ b/src/styles/tokens/_typography.scss
@@ -43,7 +43,7 @@ $text-3xl: (
 $text-4xl: (
     min: 55,
     // max: 72,
-    max: 125
+    max: 100
 );
 $text-5xl: (
     min: 70,
